src/objects/SironoSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Named either Production or Sandbox, these settings describe the values to use to validate data in the UI. In general, they should mirror those in the server</description>
    <fields>
        <fullName>Max_Plan_Installments__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Max Number Plan Installments</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Installment_Amount__c</fullName>
        <defaultValue>25.00</defaultValue>
        <label>Min Installment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Plan_Installments__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Min Number Plan Installments</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SironoSettings</label>
</CustomObject>